Fix header spacing

--- a/ubyssey/static/src/styles/components/_page.scss
+++ b/ubyssey/static/src/styles/components/_page.scss
@@ -125,7 +125,7 @@
   @media($bp-larger-than-tablet) {
     // Structure
     position: sticky;
-    top: 1rem;
+    top: 1.5rem;
   }
 }
 
